--- a/recipes.html
+++ b/recipes.html
@@ -53,11 +53,11 @@
                     <li>Combine the wet and dry ingredients</li>
                     <li>Add the unmelted chocolate chunks.</li>
                     <li>Form 15 cookies and place on a baking sheet.</li>
-                    <li>Cooke for 12 to 13 minutes at 350 degrees.</li>
+                    <li>Cook for 12 to 13 minutes at 350 degrees.</li>
                 </ul>
         </div>
 
-        <div>
+        <div class="white">
             <h2>Banana Bread</h2>
             <p>Origin: American</p>
             <p>Source:<a href= "https://www.delish.com/cooking/recipe-ideas/a43369646/chocolate-chip-banana-bread-recipe/">Delish Website</a></p>
